+ 内省